[gd_scene load_steps=6 format=3 uid="uid://dwkfeq8nvuih8"]

[ext_resource type="Script" path="res://Scenes/Tracks/track_switch.gd" id="1_daeta"]
[ext_resource type="PackedScene" uid="uid://bte3k2128hjn6" path="res://Scenes/Tracks/track.tscn" id="1_m0oeo"]

[sub_resource type="Curve2D" id="Curve2D_n1rxd"]
resource_local_to_scene = true
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -64)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_6i7u2"]
resource_local_to_scene = true
_data = {
"points": PackedVector2Array(-0.148651, 23.9328, 0, -64, 0, 0, 0, 64, -0.0308041, -34.3049, -32, -128)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_ueyg1"]
resource_local_to_scene = true
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -128)
}
point_count = 2

[node name="TrackSwitch" type="Node2D"]
script = ExtResource("1_daeta")

[node name="MainTrack" parent="." instance=ExtResource("1_m0oeo")]
curve = SubResource("Curve2D_n1rxd")

[node name="Button" type="Button" parent="."]
offset_left = 16.0
offset_top = -76.0
offset_right = 40.0
offset_bottom = -52.0
theme_override_font_sizes/font_size = 8
toggle_mode = true
text = ">>"

[node name="LeftTrack" parent="." instance=ExtResource("1_m0oeo")]
position = Vector2(0, -64)
curve = SubResource("Curve2D_6i7u2")

[node name="RightTrack" parent="." instance=ExtResource("1_m0oeo")]
position = Vector2(0, -64)
curve = SubResource("Curve2D_ueyg1")

[connection signal="toggled" from="Button" to="." method="_on_button_toggled"]
